# embedded-msgpack

./: Cargo.toml  README.md  justfile  rustfmt.toml
src/: marker.rs
src/decode/: mod.rs
src/decode/serde/: enum_.rs  map.rs  mod.rs  seq.rs
src/encode/: mod.rs
src/encode/serde/: map.rs  mod.rs  struct_.rs
src/ext/: mod.rs  timestamp.rs
tests/: lib.rs
tests/decode/: mod.rs
tests/encode/: mod.rs
tests/ensure_no_std/: Cargo.toml  justfile  rust-toolchain.toml
tests/ensure_no_std/src/: main.rs
tests/fuzzing/: mod.rs
tests/interop/: mod.rs
tests/regression/: canada.rs  color.rs  compat.rs  enums.rs  mod.rs  prim_str.rs  serde_json.rs  twitter.rs
tests/roundtrip/: mod.rs
