[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[dependencies]
wasm-msgpack = { path = "../../" }
wee_alloc = "0.4.5"
